--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                     <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
                     Sortear amigo
                 </button>
+                <br>
+                <p class="amigoElegido" id="amigoElegido"></p>
             </div>
+
         </section>
     </main>
 
